save to plist work!

--- a/CurrencyInformation/saveData.plist
+++ b/CurrencyInformation/saveData.plist
@@ -1,5 +1,456 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>Абсолютбанк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13920</string>
+		<key>EUR_SELL</key>
+		<string>13850</string>
+		<key>RUR_BUY</key>
+		<string>298.0</string>
+		<key>RUR_SELL</key>
+		<string>294.0</string>
+		<key>USD_BUY</key>
+		<string>10200</string>
+		<key>USD_SELL</key>
+		<string>10170</string>
+	</dict>
+	<key>Альфа-Банк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13970</string>
+		<key>EUR_SELL</key>
+		<string>13760</string>
+		<key>RUR_BUY</key>
+		<string>301.0</string>
+		<key>RUR_SELL</key>
+		<string>291.0</string>
+		<key>USD_BUY</key>
+		<string>10220</string>
+		<key>USD_SELL</key>
+		<string>10140</string>
+	</dict>
+	<key>БПС-Сбербанк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13910</string>
+		<key>EUR_SELL</key>
+		<string>13790</string>
+		<key>RUR_BUY</key>
+		<string>297.0</string>
+		<key>RUR_SELL</key>
+		<string>292.0</string>
+		<key>USD_BUY</key>
+		<string>10210</string>
+		<key>USD_SELL</key>
+		<string>10150</string>
+	</dict>
+	<key>БТА Банк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13920</string>
+		<key>EUR_SELL</key>
+		<string>13820</string>
+		<key>RUR_BUY</key>
+		<string>297.0</string>
+		<key>RUR_SELL</key>
+		<string>293.0</string>
+		<key>USD_BUY</key>
+		<string>10200</string>
+		<key>USD_SELL</key>
+		<string>10160</string>
+	</dict>
+	<key>БелАгроПромБанк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13930</string>
+		<key>EUR_SELL</key>
+		<string>13860</string>
+		<key>RUR_BUY</key>
+		<string>297.0</string>
+		<key>RUR_SELL</key>
+		<string>293.0</string>
+		<key>USD_BUY</key>
+		<string>10200</string>
+		<key>USD_SELL</key>
+		<string>10170</string>
+	</dict>
+	<key>БелВЭБ</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13930</string>
+		<key>EUR_SELL</key>
+		<string>13840</string>
+		<key>RUR_BUY</key>
+		<string>298.0</string>
+		<key>RUR_SELL</key>
+		<string>292.0</string>
+		<key>USD_BUY</key>
+		<string>10210</string>
+		<key>USD_SELL</key>
+		<string>10165</string>
+	</dict>
+	<key>БелГазпромБанк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13910</string>
+		<key>EUR_SELL</key>
+		<string>13850</string>
+		<key>RUR_BUY</key>
+		<string>296.3</string>
+		<key>RUR_SELL</key>
+		<string>294.0</string>
+		<key>USD_BUY</key>
+		<string>10210</string>
+		<key>USD_SELL</key>
+		<string>10170</string>
+	</dict>
+	<key>БелИнвестБанк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13940</string>
+		<key>EUR_SELL</key>
+		<string>13820</string>
+		<key>RUR_BUY</key>
+		<string>297.0</string>
+		<key>RUR_SELL</key>
+		<string>292.0</string>
+		<key>USD_BUY</key>
+		<string>10190</string>
+		<key>USD_SELL</key>
+		<string>10150</string>
+	</dict>
+	<key>БелСвиссБанк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13900</string>
+		<key>EUR_SELL</key>
+		<string>13850</string>
+		<key>RUR_BUY</key>
+		<string>296.2</string>
+		<key>RUR_SELL</key>
+		<string>295.0</string>
+		<key>USD_BUY</key>
+		<string>10190</string>
+		<key>USD_SELL</key>
+		<string>10170</string>
+	</dict>
+	<key>БелСвиссБанк, РКЦ №1, РїР». РЎРІРѕР±РѕРґС‹, 23</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13900</string>
+		<key>EUR_SELL</key>
+		<string>13820</string>
+		<key>RUR_BUY</key>
+		<string>297.0</string>
+		<key>RUR_SELL</key>
+		<string>295.0</string>
+		<key>USD_BUY</key>
+		<string>10200</string>
+		<key>USD_SELL</key>
+		<string>10160</string>
+	</dict>
+	<key>БеларусБанк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13970</string>
+		<key>EUR_SELL</key>
+		<string>13850</string>
+		<key>RUR_BUY</key>
+		<string>296.6</string>
+		<key>RUR_SELL</key>
+		<string>293.0</string>
+		<key>USD_BUY</key>
+		<string>10210</string>
+		<key>USD_SELL</key>
+		<string>10170</string>
+	</dict>
+	<key>Белорусский Банк Малого Бизнеса</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13930</string>
+		<key>EUR_SELL</key>
+		<string>13850</string>
+		<key>RUR_BUY</key>
+		<string>296.5</string>
+		<key>RUR_SELL</key>
+		<string>291.0</string>
+		<key>USD_BUY</key>
+		<string>10200</string>
+		<key>USD_SELL</key>
+		<string>10160</string>
+	</dict>
+	<key>Белорусский Народный Банк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13900</string>
+		<key>EUR_SELL</key>
+		<string>13820</string>
+		<key>RUR_BUY</key>
+		<string>300.0</string>
+		<key>RUR_SELL</key>
+		<string>295.0</string>
+		<key>USD_BUY</key>
+		<string>10210</string>
+		<key>USD_SELL</key>
+		<string>10170</string>
+	</dict>
+	<key>ВТБ Беларусь</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13930</string>
+		<key>EUR_SELL</key>
+		<string>13760</string>
+		<key>RUR_BUY</key>
+		<string>301.0</string>
+		<key>RUR_SELL</key>
+		<string>278.0</string>
+		<key>USD_BUY</key>
+		<string>10230</string>
+		<key>USD_SELL</key>
+		<string>10100</string>
+	</dict>
+	<key>Дельта Банк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13930</string>
+		<key>EUR_SELL</key>
+		<string>13850</string>
+		<key>RUR_BUY</key>
+		<string>297.0</string>
+		<key>RUR_SELL</key>
+		<string>291.0</string>
+		<key>USD_BUY</key>
+		<string>10210</string>
+		<key>USD_SELL</key>
+		<string>10170</string>
+	</dict>
+	<key>ЕвроБанк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13920</string>
+		<key>EUR_SELL</key>
+		<string>13820</string>
+		<key>RUR_BUY</key>
+		<string>298.0</string>
+		<key>RUR_SELL</key>
+		<string>292.0</string>
+		<key>USD_BUY</key>
+		<string>10220</string>
+		<key>USD_SELL</key>
+		<string>10160</string>
+	</dict>
+	<key>ЕвроТоргИнвестБанк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13950</string>
+		<key>EUR_SELL</key>
+		<string>13830</string>
+		<key>RUR_BUY</key>
+		<string>296.0</string>
+		<key>RUR_SELL</key>
+		<string>288.0</string>
+		<key>USD_BUY</key>
+		<string>10200</string>
+		<key>USD_SELL</key>
+		<string>10170</string>
+	</dict>
+	<key>Идея Банк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13900</string>
+		<key>EUR_SELL</key>
+		<string>13800</string>
+		<key>RUR_BUY</key>
+		<string>298.0</string>
+		<key>RUR_SELL</key>
+		<string>294.5</string>
+		<key>USD_BUY</key>
+		<string>10200</string>
+		<key>USD_SELL</key>
+		<string>10160</string>
+	</dict>
+	<key>ИнтерПэйБанк (Кредэксбанк)</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13940</string>
+		<key>EUR_SELL</key>
+		<string>13780</string>
+		<key>RUR_BUY</key>
+		<string>300.0</string>
+		<key>RUR_SELL</key>
+		<string>289.0</string>
+		<key>USD_BUY</key>
+		<string>10220</string>
+		<key>USD_SELL</key>
+		<string>10130</string>
+	</dict>
+	<key>МТБанк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13920</string>
+		<key>EUR_SELL</key>
+		<string>13850</string>
+		<key>RUR_BUY</key>
+		<string>297.0</string>
+		<key>RUR_SELL</key>
+		<string>295.0</string>
+		<key>USD_BUY</key>
+		<string>10190</string>
+		<key>USD_SELL</key>
+		<string>10160</string>
+	</dict>
+	<key>Москва-Минск Банк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13910</string>
+		<key>EUR_SELL</key>
+		<string>13780</string>
+		<key>RUR_BUY</key>
+		<string>298.0</string>
+		<key>RUR_SELL</key>
+		<string>294.0</string>
+		<key>USD_BUY</key>
+		<string>10220</string>
+		<key>USD_SELL</key>
+		<string>10160</string>
+	</dict>
+	<key>Паритетбанк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13900</string>
+		<key>EUR_SELL</key>
+		<string>13830</string>
+		<key>RUR_BUY</key>
+		<string>297.0</string>
+		<key>RUR_SELL</key>
+		<string>293.0</string>
+		<key>USD_BUY</key>
+		<string>10190</string>
+		<key>USD_SELL</key>
+		<string>10160</string>
+	</dict>
+	<key>ПриорБанк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13970</string>
+		<key>EUR_SELL</key>
+		<string>13770</string>
+		<key>RUR_BUY</key>
+		<string>297.0</string>
+		<key>RUR_SELL</key>
+		<string>287.0</string>
+		<key>USD_BUY</key>
+		<string>10230</string>
+		<key>USD_SELL</key>
+		<string>10130</string>
+	</dict>
+	<key>РРБ-Банк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13940</string>
+		<key>EUR_SELL</key>
+		<string>13800</string>
+		<key>RUR_BUY</key>
+		<string>298.0</string>
+		<key>RUR_SELL</key>
+		<string>290.0</string>
+		<key>USD_BUY</key>
+		<string>10210</string>
+		<key>USD_SELL</key>
+		<string>10170</string>
+	</dict>
+	<key>ТК Банк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13950</string>
+		<key>EUR_SELL</key>
+		<string>13820</string>
+		<key>RUR_BUY</key>
+		<string>300.0</string>
+		<key>RUR_SELL</key>
+		<string>294.0</string>
+		<key>USD_BUY</key>
+		<string>10190</string>
+		<key>USD_SELL</key>
+		<string>10170</string>
+	</dict>
+	<key>ТехноБанк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13900</string>
+		<key>EUR_SELL</key>
+		<string>13830</string>
+		<key>RUR_BUY</key>
+		<string>296.0</string>
+		<key>RUR_SELL</key>
+		<string>295.0</string>
+		<key>USD_BUY</key>
+		<string>10190</string>
+		<key>USD_SELL</key>
+		<string>10170</string>
+	</dict>
+	<key>ТрастБанк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13930</string>
+		<key>EUR_SELL</key>
+		<string>13830</string>
+		<key>RUR_BUY</key>
+		<string>299.0</string>
+		<key>RUR_SELL</key>
+		<string>288.0</string>
+		<key>USD_BUY</key>
+		<string>10210</string>
+		<key>USD_SELL</key>
+		<string>10160</string>
+	</dict>
+	<key>ФрансаБанк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13920</string>
+		<key>EUR_SELL</key>
+		<string>13840</string>
+		<key>RUR_BUY</key>
+		<string>296.5</string>
+		<key>RUR_SELL</key>
+		<string>295.0</string>
+		<key>USD_BUY</key>
+		<string>10200</string>
+		<key>USD_SELL</key>
+		<string>10170</string>
+	</dict>
+	<key>Хоум Кредит Банк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13950</string>
+		<key>EUR_SELL</key>
+		<string>13700</string>
+		<key>RUR_BUY</key>
+		<string>295.0</string>
+		<key>RUR_SELL</key>
+		<string>289.0</string>
+		<key>USD_BUY</key>
+		<string>10300</string>
+		<key>USD_SELL</key>
+		<string>10100</string>
+	</dict>
+	<key>Цептер Банк</key>
+	<dict>
+		<key>EUR_BUY</key>
+		<string>13900</string>
+		<key>EUR_SELL</key>
+		<string>13820</string>
+		<key>RUR_BUY</key>
+		<string>297.0</string>
+		<key>RUR_SELL</key>
+		<string>286.0</string>
+		<key>USD_BUY</key>
+		<string>10200</string>
+		<key>USD_SELL</key>
+		<string>10160</string>
+	</dict>
+</dict>
 </plist>
